test/parser/Queries/syntax_errors/fail_K-ForExprWithout-55.xq
(:*************** where *** let ********foo************foo**************)
(: Test: ne  K-ForExprWithout-55    where      let              eq       $    : where )
(: Written by: FransfooEnglich    let    where   eq                        :) $ 
(: Date: 2006-10-05T18:29:37+02:00                      :)
(:Purpose:foo Apply fn:count() to a for-expression.       :) ne 
(:** for **foo***** for  ne ******** for *********** ne ********************* for ***:)
(for $i in (1, 2, current-time( for )) return ($i,  eq $i))  ne eq 6